# discord-rpc

./: build.py
include/: discord_register.h  discord_rpc.h
src/: CMakeLists.txt  discord_register_linux.cpp  discord_register_osx.m  discord_register_win.cpp  discord_rpc.cpp
